--- a/package.json
+++ b/package.json
@@ -12,36 +12,46 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
+    "@auth/prisma-adapter": "^2.2.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^5.14.0",
+    "@types/graphql-fields": "^1.3.8",
+    "apollo-server-micro": "^3.6.1",
+    "axios": "^1.7.2",
+    "graphql": "^16.8.1",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.23.0",
     "jotai": "^2.8.0",
-    "next": "13.5.6",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
+    "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.19",
+    "prisma": "^5.14.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-loading": "^2.0.3",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "reflect-metadata": "^0.2.2",
+    "safe-json-stringify": "^1.2.0",
+    "ts-tiny-invariant": "^2.0.5",
+    "tslib": "^2.6.2",
+    "type-graphql": "^2.0.0-rc.1",
+    "typegraphql-prisma": "^0.27.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@types/jest": "^29.5.6",
-    "@types/node": "^20.8.7",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "autoprefixer": "^10",
+    "@types/micro-cors": "^0.1.5",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.4.3",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3",
-    "ts-node": "^10.9.1",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.4.0",
+    "typegraphql-prisma": "^0.27.2",
     "typescript": "^5"
   }
 }
