--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@auth/prisma-adapter": "^2.2.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.14.0",
     "@types/graphql-fields": "^1.3.8",
