--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ DATABASE_URL="postgres://postgres.javoixjtietzudiqzofm:Udea1020415470@aws-0-us-e
 AUTH0_DOMAIN="dev-7g4m0r3xtc86blle.us.auth0.com"
 AUTH0_CLIENT_ID="iAZdxQ8qQ4eS3tefmb9ls4RV2mulxYGG"
 AUTH0_CLIENT_SECRET='kEeqfLzS1tH626M9oQ_leKEwAoQL3zquwN2MUL1Na4obQgtiBnvvsWb92IUV7Nlm'
+
+API_AUTH0_CLIENT_ID="Ykb4LN9waTJ0ifisobsHIK736SDgVmQV"
+API_AUTH0_CLIENT_SECRET='kQeup26sim0QsVEBA00LZrmX_zidYm1MTdBZCpZ_PnF4yBtB7uE3v35N3w5PtxdM'
