--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@auth/prisma-adapter": "^2.2.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.17",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.15.0",
     "@types/graphql-fields": "^1.3.8",
     "apollo-server-micro": "^3.6.1",
     "axios": "^1.6.8",
@@ -28,10 +29,11 @@
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "next": "14.1.4",
-    "next-auth": "^4.20.1",
+    "next-auth": "^4.24.7",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading": "^2.0.3",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "reflect-metadata": "^0.2.2",
