--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+#DATABASE_URL="postgres://postgres.javoixjtietzudiqzofm:[Udea1020415470]@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
 DATABASE_URL="postgres://postgres.javoixjtietzudiqzofm:Udea1020415470@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
 AUTH0_DOMAIN="dev-7g4m0r3xtc86blle.us.auth0.com"
 AUTH0_CLIENT_ID="iAZdxQ8qQ4eS3tefmb9ls4RV2mulxYGG"
