--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^5.15.0",
     "@types/graphql-fields": "^1.3.8",
+    "@types/safe-json-stringify": "^1.1.5",
     "apollo-server-micro": "^3.6.1",
     "axios": "^1.6.8",
     "graphql": "^16.8.1",
