--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading": "^2.0.3",
+    "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
+    "recoil": "^0.7.7",
     "reflect-metadata": "^0.2.2",
     "safe-json-stringify": "^1.2.0",
     "ts-tiny-invariant": "^2.0.5",
@@ -50,6 +52,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
